--- a/01-Emergency_Information.Rmd
+++ b/01-Emergency_Information.Rmd
@@ -18,6 +18,7 @@ A fire extinguisher is located adjacent to the front door.
 (Need to add safe location)
 
 ## Mask Policy
+No current mandate, however, the QCL is considered a classroom. This means the directors have the ability to mandate mask wearing inside the QCL.
 
 ## QCL Staff Contacts
 Jeho Park (Director): (909) 607 dash 8526
