--- a/16-Tips_for_Mentors.Rmd
+++ b/16-Tips_for_Mentors.Rmd
@@ -2,3 +2,4 @@
 
 - Be fun, but don't be sarcastic
   - Students have a lot of insecurities, so what you might find harmless can be offensive to students concerning their skill level.
+- Some students enter the QCL not understanding they will be approached by a Mentor.
